fixed gap which occurs when subnav gets fixed

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,4 +1,5 @@
 body { padding: 60px; }
+body.with-subnav { padding-top: 130px; }
 a { color: #00B7FF; }
 p { font-size: 16px; }
 p.lead { font-size: 19px; }
